--- a/package.json
+++ b/package.json
@@ -24,18 +24,28 @@
     "ember-cli": "2.4.3",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-bourbon": "1.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-deploy": "0.5.1",
+    "ember-cli-google-fonts": "2.3.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.4.2",
+    "ember-dynamic-render": "1.0.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-inject-script": "0.0.2",
     "ember-load-initializers": "^0.5.1",
+    "ember-pagefront": "0.11.1",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
+    "ember-wordpress": "0.1.1",
+    "flexi": "1.1.5",
     "loader.js": "^4.0.1"
   }
 }
