--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "ember-pagefront": "0.11.1",
     "ember-resolver": "^2.0.3",
     "ember-truth-helpers": "1.2.0",
-    "ember-wordpress": "0.1.1",
+    "ember-wordpress": "EmberSherpa/ember-wordpress#bce16b53854a6502dc5dbfa06e90166112c9c414",
     "flexi": "1.1.5",
     "loader.js": "^4.0.1"
   }
