--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-bourbon": "1.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-deploy": "0.5.1",
+    "ember-cli-fastboot": "0.6.2",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
