--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-pagefront": "0.11.1",
     "ember-resolver": "^2.0.3",
+    "ember-responsive": "1.2.6",
     "ember-truth-helpers": "1.2.0",
     "loader.js": "^4.0.1"
   }
