--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "embermeetup",
   "dependencies": {
     "ember": "~2.4.3",
-    "ember-cli-shims": "0.1.1",
+    "ember-cli-shims": "~0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
     "bourbon": "4.2.6",
