--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composable-helpers": "0.22.1",
     "ember-data": "^2.4.2",
     "ember-dynamic-render": "1.0.0",
     "ember-export-application-global": "^1.0.5",
