--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-data": "^2.4.2",
     "ember-dynamic-render": "1.0.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "2.1.0",
     "ember-inject-script": "0.0.2",
     "ember-load-initializers": "^0.5.1",
     "ember-pagefront": "0.11.1",
