--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-font-awesome": "2.1.0",
     "ember-inject-script": "0.0.2",
     "ember-load-initializers": "^0.5.1",
+    "ember-math-helpers": "1.0.0",
     "ember-pagefront": "0.11.1",
     "ember-resolver": "^2.0.3",
     "ember-responsive": "1.2.6",
