--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
     "ember-pagefront": "0.11.1",
+    "ember-power-select": "0.10.2",
     "ember-resolver": "^2.0.3",
     "ember-responsive": "1.2.6",
+    "ember-route-action-helper": "0.3.1",
     "ember-truth-helpers": "1.2.0",
     "loader.js": "^4.0.1"
   }
