Added episodes page

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-moment-shim": "1.1.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.3.1",
@@ -46,6 +47,7 @@
     "ember-inject-script": "0.0.2",
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
+    "ember-moment": "6.1.0",
     "ember-pagefront": "0.11.1",
     "ember-power-select": "0.10.2",
     "ember-resolver": "^2.0.3",
