--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-responsive": "1.2.6",
     "ember-route-action-helper": "0.3.1",
     "ember-truth-helpers": "1.2.0",
+    "liquid-fire": "0.23.0",
     "loader.js": "^4.0.1"
   }
 }
