--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-deploy": "0.5.1",
     "ember-cli-fastboot": "0.6.2",
     "ember-cli-google-fonts": "2.3.0",
+    "ember-cli-head": "0.0.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
