--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ember-route-action-helper": "0.3.1",
     "ember-truth-helpers": "1.2.0",
     "liquid-fire": "0.23.0",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "memory-scroll": "0.2.0"
   }
 }
