--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.0",
     "ember-inject-script": "0.0.2",
+    "ember-interpolate-helper": "0.1.1",
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
     "ember-moment": "6.1.0",
