--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember fastboot",
+    "start": "./node_modules/.bin/ember fastboot",
     "test": "ember test"
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "~5.3.0"
   },
   "author": "",
   "license": "MIT",
