--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ember-cli-bourbon": "1.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-deploy": "0.5.1",
-    "ember-cli-fastboot": "0.6.2",
+    "ember-cli-fastboot": "ember-fastboot/ember-cli-fastboot#v1.0.0-beta.1",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-head": "0.0.6",
     "ember-cli-htmlbars": "^1.0.3",
@@ -50,7 +50,6 @@
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
     "ember-moment": "6.1.0",
-    "ember-pagefront": "0.11.1",
     "ember-power-select": "0.10.2",
     "ember-resolver": "^2.0.3",
     "ember-responsive": "1.2.6",
