--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember fastboot",
-    "test": "ember test"
+    "test": "ember test",
+    "deploy": "GCLOUD_PROJECT=global-ember-meetup-frontend ember deploy production"
   },
   "repository": "",
   "engines": {
@@ -26,7 +27,10 @@
     "ember-cli-babel": "^5.1.6",
     "ember-cli-bourbon": "1.2.2",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-deploy": "0.5.1",
+    "ember-cli-deploy": "0.6.1",
+    "ember-cli-deploy-build": "0.1.1",
+    "ember-cli-deploy-gcloud": "0.1.0",
+    "ember-cli-deploy-gcloud-storage": "taras/ember-cli-deploy-gcloud-storage",
     "ember-cli-fastboot": "ember-fastboot/ember-cli-fastboot#v1.0.0-beta.1",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-head": "0.0.6",
