--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
     "ember-moment": "6.1.0",
+    "ember-one-way-controls": "0.8.0",
     "ember-power-select": "0.10.2",
     "ember-resolver": "^2.0.3",
     "ember-responsive": "1.2.6",
