Upgraded EmberClI & Ember

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "0.7.1",
+    "ember-ajax": "2.4.0",
     "ember-cli": "2.4.3",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
@@ -31,7 +31,7 @@
     "ember-cli-deploy-build": "0.1.1",
     "ember-cli-deploy-gcloud": "0.1.1",
     "ember-cli-deploy-gcloud-storage": "taras/ember-cli-deploy-gcloud-storage",
-    "ember-cli-fastboot": "ember-fastboot/ember-cli-fastboot#v1.0.0-beta.1",
+    "ember-cli-fastboot": "v1.0.0-beta.2",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-head": "0.0.6",
     "ember-cli-htmlbars": "^1.0.3",
@@ -45,7 +45,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "0.22.1",
     "ember-crumbly": "1.0.2",
-    "ember-data": "^2.4.2",
+    "ember-data": "^2.5.0",
     "ember-disqus": "0.2.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.0",
