--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "2.4.0",
+    "ember-chimp": "0.1.0",
     "ember-cli": "2.4.3",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
@@ -60,8 +61,12 @@
     "ember-responsive": "1.2.6",
     "ember-route-action-helper": "0.3.1",
     "ember-truth-helpers": "1.2.0",
+    "flexi": "1.1.9",
     "liquid-fire": "0.23.0",
     "loader.js": "^4.0.1",
     "memory-scroll": "0.2.0"
+  },
+  "dependencies": {
+    "ember-chimp": "0.1.0"
   }
 }
