--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-interpolate-helper": "0.1.1",
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
+    "ember-modal-dialog": "0.8.5",
     "ember-moment": "6.1.0",
     "ember-one-way-controls": "0.8.0",
     "ember-power-select": "0.10.2",
