--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "2.4.0",
     "ember-chimp": "0.1.0",
-    "ember-cli": "2.4.3",
+    "ember-cli": "2.7.0-beta.5",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-bourbon": "1.2.2",
@@ -35,21 +35,22 @@
     "ember-cli-fastboot": "1.0.0-beta.4",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-head": "0.0.6",
-    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-moment-shim": "1.1.0",
-    "ember-cli-qunit": "^1.4.0",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-jshint": "^1.0.0",
+    "ember-cli-qunit": "^2.0.0",
+    "ember-cli-release": "0.2.9",
     "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "0.22.1",
     "ember-crumbly": "1.0.2",
-    "ember-data": "^2.5.0",
+    "ember-data": "^2.6.0",
     "ember-disqus": "0.2.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-font-awesome": "2.1.0",
+    "ember-font-awesome": "2.1.1",
     "ember-inject-script": "0.0.2",
     "ember-interpolate-helper": "0.1.1",
     "ember-load-initializers": "^0.5.1",
@@ -66,5 +67,9 @@
     "liquid-fire": "0.23.0",
     "loader.js": "^4.0.1",
     "memory-scroll": "0.2.0"
+  },
+  "dependencies": {
+    "ember-cli-htmlbars": "^1.0.8",
+    "loader.js": "^4.0.1"
   }
 }
