--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -1,6 +1,5 @@
 {
   "predef": [
-    "setBreakpoint",
     "document",
     "window",
     "location",
@@ -48,6 +47,6 @@
   "strict": false,
   "white": false,
   "eqnull": true,
-  "esnext": true,
+  "esversion": 6,
   "unused": true
 }
