--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
     "ember-cli-head": "0.0.6",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-moment-shim": "1.1.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-moment-shim": "1.1.0",
     "ember-cli-qunit": "^2.0.0",
     "ember-cli-release": "0.2.9",
     "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-composable-helpers": "0.22.1",
+    "ember-composable-helpers": "0.26.2",
+    "ember-concurrency": "0.7.8",
     "ember-crumbly": "1.0.2",
     "ember-data": "^2.6.0",
     "ember-disqus": "0.2.0",
