--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "2.4.0",
+    "ember-ajax": "2.5.1",
     "ember-chimp": "0.1.0",
-    "ember-cli": "2.7.0-beta.5",
+    "ember-cli": "^2.7.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-bourbon": "1.2.2",
@@ -31,10 +31,11 @@
     "ember-cli-deploy": "0.6.1",
     "ember-cli-deploy-build": "0.1.1",
     "ember-cli-deploy-gcloud": "0.1.1",
-    "ember-cli-deploy-gcloud-storage": "taras/ember-cli-deploy-gcloud-storage",
+    "ember-cli-deploy-gcloud-storage": "0.1.1",
     "ember-cli-fastboot": "1.0.0-beta.4",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-head": "0.0.6",
+    "ember-cli-htmlbars": "^1.0.8",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
@@ -48,12 +49,12 @@
     "ember-composable-helpers": "0.26.2",
     "ember-concurrency": "0.7.8",
     "ember-crumbly": "1.0.2",
-    "ember-data": "^2.6.0",
+    "ember-data": "^2.7.0",
     "ember-disqus": "0.2.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.1",
     "ember-inject-script": "0.0.2",
-    "ember-interpolate-helper": "0.1.1",
+    "ember-interpolate-helper": "0.1.0",
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
     "ember-modal-dialog": "0.8.5",
@@ -70,7 +71,6 @@
     "memory-scroll": "0.2.0"
   },
   "dependencies": {
-    "ember-cli-htmlbars": "^1.0.8",
     "loader.js": "^4.0.1"
   }
 }
