--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,18 @@ cache:
   directories:
   - node_modules
 before_install:
-- openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
-  -in credentials.tar.gz.enc -out credentials.tar.gz -d
-- npm config set spin false
-- npm install -g bower
-- bower --version
-- npm install phantomjs-prebuilt
-- phantomjs --version
-- npm install -g gcloud
-- gcloud config set project 'global-ember-meetup-frontend'
+  - openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
+    -in credentials.tar.gz.enc -out credentials.tar.gz -d
+  - npm config set spin false
+  - npm install -g bower
+  - bower --version
+  - npm install phantomjs-prebuilt
+  - phantomjs --version
+  - npm install -g gcloud
+  - gcloud config set project 'global-ember-meetup-frontend'
 
 after_success:
-- npm deploy
+  - test $TRAVIS_BRANCH = "master" && npm deploy
 
 install:
 - npm install
