--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,19 @@ cache:
 before_install:
   - openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
     -in credentials.tar.gz.enc -out credentials.tar.gz -d
+  - if [ ! -d ${HOME}/google-cloud-sdk ]; then
+     curl https://sdk.cloud.google.com | bash;
+    fi
+  - tar -xzf credentials.tar.gz
+  - mkdir -p lib
+  - gcloud auth activate-service-account --key-file client-secret.json
+  - gcloud config set project 'global-ember-meetup-frontend'
   - npm config set spin false
   - npm install -g bower
   - bower --version
   - npm install phantomjs-prebuilt
   - phantomjs --version
-  - npm install -g gcloud
-  - gcloud config set project 'global-ember-meetup-frontend'
+
 
 after_success:
   - test $TRAVIS_BRANCH = "master" && npm deploy
