--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
     -in credentials.tar.gz.enc -out credentials.tar.gz -d
   - if [ ! -d ${HOME}/google-cloud-sdk ]; then
+     export CLOUDSDK_CORE_DISABLE_PROMPTS=1;
      curl https://sdk.cloud.google.com | bash;
     fi
   - tar -xzf credentials.tar.gz
