--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ sudo: false
 cache:
   directories:
   - node_modules
+  - "$HOME/google-cloud-sdk/"
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
     -in credentials.tar.gz.enc -out credentials.tar.gz -d
@@ -12,6 +14,7 @@ before_install:
      export CLOUDSDK_CORE_DISABLE_PROMPTS=1;
      curl https://sdk.cloud.google.com | bash;
     fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
   - tar -xzf credentials.tar.gz
   - mkdir -p lib
   - gcloud auth activate-service-account --key-file client-secret.json
@@ -27,8 +30,8 @@ after_success:
   - test $TRAVIS_BRANCH = "master" && npm deploy
 
 install:
-- npm install
-- bower install
+  - npm install
+  - bower install
 
 script:
-- npm test
+  - npm test
