--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ cache:
 before_install:
   - openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
     -in credentials.tar.gz.enc -out credentials.tar.gz -d
-  - if [ ! -d ${HOME}/google-cloud-sdk ]; then
+  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then
      export CLOUDSDK_CORE_DISABLE_PROMPTS=1;
      curl https://sdk.cloud.google.com | bash;
     fi
-  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - source "$HOME/google-cloud-sdk/path.bash.inc""
+  - gcloud version
   - tar -xzf credentials.tar.gz
   - mkdir -p lib
   - gcloud auth activate-service-account --key-file client-secret.json
