too many quotes

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     -in credentials.tar.gz.enc -out credentials.tar.gz -d
   - gcloud version || true
   - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
-  - source "$HOME/google-cloud-sdk/path.bash.inc""
+  - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud version
   - tar -xzf credentials.tar.gz
   - mkdir -p lib
