--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,15 @@ cache:
   - node_modules
   - "$HOME/google-cloud-sdk/"
 
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_25555bb76dbd_key -iv $encrypted_25555bb76dbd_iv
     -in credentials.tar.gz.enc -out credentials.tar.gz -d
@@ -24,7 +33,6 @@ before_install:
   - bower --version
   - npm install phantomjs-prebuilt
   - phantomjs --version
-
 
 after_success:
   - test $TRAVIS_BRANCH = "master" && npm deploy
