Better way to setup GOOGLE_APPLICATION_CREDENTIALS

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ cache:
 
 env:
   - CXX=g++-4.8
-  - GOOGLE_APPLICATION_CREDENTIALS="$HOME/client-secret.json"
 addons:
   apt:
     sources:
@@ -23,6 +22,7 @@ before_install:
   - gcloud version || true
   - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
   - source $HOME/google-cloud-sdk/path.bash.inc
+  - export GOOGLE_APPLICATION_CREDENTIALS="$HOME/client-secret.json"
   - gcloud version
   - tar -xzf credentials.tar.gz
   - mkdir -p lib
