--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
   - phantomjs --version
 
 after_success:
-  - test $TRAVIS_BRANCH = "master" && npm run deploy
+  - npm run deploy
 
 install:
   - npm install
