--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - gcloud version || true
   - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - export GOOGLE_APPLICATION_CREDENTIALS="$HOME/client-secret.json"
+  - export GOOGLE_APPLICATION_CREDENTIALS=client-secret.json
   - export GCLOUD_PROJECT=global-ember-meetup-frontend
   - gcloud version
   - tar -xzf credentials.tar.gz
