--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-deploy": "0.6.1",
     "ember-cli-deploy-build": "0.1.1",
     "ember-cli-deploy-gcloud": "0.2.1",
+    "ember-cli-deploy-gcloud-storage": "0.1.2",
     "ember-cli-fastboot": "1.0.0-beta.4",
     "ember-cli-google-fonts": "2.3.0",
     "ember-cli-head": "0.0.6",
