--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "ember-font-awesome": "2.1.1",
     "ember-inject-script": "0.0.2",
     "ember-interpolate-helper": "0.1.0",
+    "ember-let": "0.5.3",
     "ember-load-initializers": "^0.5.1",
     "ember-math-helpers": "1.0.0",
+    "ember-microstates": "0.3.0",
     "ember-modal-dialog": "0.8.5",
     "ember-moment": "6.1.0",
     "ember-one-way-controls": "0.8.0",
